Features:
X and Y speed on each logo
clicking on Most hits in the top left will freeze all dvds with the most hits
and bring your mouse to one of them

Improvements:
better controls
each info can be toggled on logos
bug fixes

Technical changes:
moved everything from globalfuncs.py to Main.py
removed the vars function finally
improved the DVDS and Options classes

Removed:
disney + pixar random movies